# openclaw_moneybot

./: .gitignore  AGENTS.md  Makefile  README.md  RUNBOOK.md  memory_copilot.md  memory_opencode.md  pyproject.toml  run_opencode.sh
.github/: copilot-instructions.md
configs/: moneybot.yaml
docs/: CODE_REVIEW1_FIXES.md  CODE_REVIEW1_TODO.md  CODE_REVIEW2_FIXES.md  CODE_REVIEW2_SPEC.md  CODE_REVIEW2_TODO.md  CODE_REVIEW3_FIXES.md  CODE_REVIEW3_SPEC.md  CODE_REVIEW3_TODO.md  EVIDENCE_ARCHIVE.md  INNER_VOICE_SPEC.md  INNER_VOICE_TODO.md  INT_TEST1_TODO.md  INT_TEST2_TODO.md  INT_TEST3_TODO.md  KUZU.md  LEDGER_SCHEMA.md  LOCAL_DEPLOYMENT.md  OPENCLAW_MONEYBOT_ARCHITECTURE.md  OPENCLAW_MONEYBOT_PROJECT_SPEC.md  PLUGINS1_TODO.md  README.md  SAFETY_INVARIANTS.md  SKILLS1_TODO.md  TESTING.md  TODO.md  UNIT_TEST1_TODO.md  UNIT_TEST2_TODO.md  UNIT_TEST3_TODO.md  WALLET_GOVERNOR_DESIGN.md
docs/OPENCLAW_MONEYBOT_SKILLS_TODOS/: MASTER_IMPLEMENTATION_TODO.md  README.md
shared/: __init__.py  config.py  contracts.py  error.py  validation.py
skills/budget_and_roi_planner/: __init__.py  analysis.py  models.py  runner.py
skills/email_drafter/: __init__.py  models.py  runner.py
skills/experiment_reviewer/: __init__.py  models.py  runner.py
skills/integration_pipeline/: __init__.py  runner.py
skills/ledger_skill/: SKILL.md  __init__.py  hashing.py  models.py  repository.py  schema.sql  service.py
skills/moneybot_policy_guard/: __init__.py  models.py  rules.py  runner.py
skills/opportunity_scout/: SKILL.md  __init__.py  analysis.py  models.py  runner.py
skills/receipt_and_evidence_archiver/: __init__.py  hashing.py  models.py  runner.py  storage.py
skills/tos_legal_checker/: __init__.py  analysis.py  models.py  runner.py
skills/wallet_governor_client/: __init__.py  models.py  runner.py
skills/wallet_governor_service/: __init__.py  models.py  runner.py
src/openclaw_moneybot/: __init__.py
tests/: __init__.py  test_acceptance_criteria.py  test_integration_blocked_actions.py  test_shared_contracts.py  test_wallet_governor_service.py
(+296 files in other folders)
