[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "openclaw-moneybot"
version = "0.1.0"
description = "A bounded, auditable local experiment runner for small money-making workflows."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Phil" }]
dependencies = [
  "fastapi>=0.115,<0.116",
  "httpx>=0.28,<0.29",
  "pydantic>=2.11,<3",
  "PyYAML>=6,<7",
]

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<0.12",
  "types-PyYAML>=6.0.12,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_moneybot"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["openclaw_moneybot"]
plugins = ["pydantic.mypy"]
